--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ Library
 Builds
 ed25519/ed25519Win/Release/
 ed25519/ed25519Win/ed25519/Release/
+ed25519/ed25519Win/ed25519/x64/
+ed25519/ed25519Win/x64/
