--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ ed25519/ed25519Win/Release/
 ed25519/ed25519Win/ed25519/Release/
 ed25519/ed25519Win/ed25519/x64/
 ed25519/ed25519Win/x64/
+ed25519/ed25519Win/Debug/
+ed25519/ed25519Win/ed25519/Debug/
