Add SHA3 package.

--- a/packages.config
+++ b/packages.config
@@ -3,5 +3,6 @@
   <package id="Base58Check" version="0.2.0" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net471" />
   <package id="RSG.Promise" version="3.0.1" targetFramework="net471" />
+  <package id="SHA3" version="1.0.0-rc" targetFramework="net471" />
   <package id="WebSocketSharp-NonPreRelease" version="1.0.0" targetFramework="net471" />
 </packages>
